--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Recent News</h1>
     <li>
+        One paper was submitted to IEEE TCSVT 2020</a>.
+    </li>
+    <li>
         One paper was submitted to IEEE TMM 2020 (cooperative)</a>.
     </li>
     <li>
@@ -116,7 +119,7 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Selected Publications</h1>
     <li>
-        <b>Soft-edge Assisted Network for Single Image Super-Resolution</b> </br>
+        <b>Soft-edge Assisted Network for Single Image Super-Resolution 【Top Journal】</b> </br>
         <a href="paper/TIP_2020.pdf", target="_blank">[Paper]</a>
         [Code]
         </br>
@@ -127,7 +130,7 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
     </li>
     <li>
-        <b>Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution 【Oral】</b> </br>
+        <b>Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution 【Top Conference Workshop, Oral】</b> </br>
         <a href="paper/ICCVW_LCI_2019.pdf", target="_blank">[Paper]</a>
         <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[Poster]</a>
         <a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[Slides]</a>
@@ -139,7 +142,7 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
         <i style="font-size: 0.6rem; padding-left: 1rem">Learning for Computational Imaging (LCI) Workshop</i>
     </li>
     <li>
-        <b>Multi-scale Residual Network for Image Super-Resolution.</b> </br>
+        <b>Multi-scale Residual Network for Image Super-Resolution 【Top Conference】</b> </br>
         <!--.
         <a href="http://openaccess.thecvf.com/content_ECCV_2018/papers/Juncheng_Li_Multi-scale_Residual_Network_ECCV_2018_paper.pdf">[Paper]</a>
         -->
