--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Recent News</h1>
     <li>
-        One paper was submitted to IEEE TCSVT 2020</a>.
+        One paper was submitted to IEEE TCSVT 2020, image super-resolution.</a>
     </li>
     <li>
-        One paper was submitted to IEEE TMM 2020 (cooperative)</a>.
+        One paper was submitted to IEEE TMM 2020, low-light image enhancemen. (cooperative)</a>.
     </li>
     <li>
-        One paper was submitted to IEEE TPAMI 2020</a>.
+        One paper was submitted to IEEE TPAMI 2020, image super-resolution.</a>
     </li>
     <li>
-        One paper was submitted to IEEE TNNLS 2019</a>.
+        One paper was submitted to IEEE TNNLS 2019, image denoising.</a>
     </li>
     <li>
         We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6287639", target="_blank"> IEEE Access 2020</b></a>.
@@ -119,9 +119,9 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Selected Publications</h1>
     <li>
-        <b>Soft-edge Assisted Network for Single Image Super-Resolution 【Top Journal】</b> </br>
+        <b>Soft-edge Assisted Network for Single Image Super-Resolution </b> </br>
         <a href="paper/TIP_2020.pdf", target="_blank">[Paper]</a>
-        [Code]
+        [Code]【Top Journal】
         </br>
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u>Juncheng Li*</u>, and Tieyong Zeng</p>
         <p style="margin: 0; padding-left: 1rem">Author names alphabetically, Main contributor*</p>
@@ -130,11 +130,12 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
     </li>
     <li>
-        <b>Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution 【Top Conference Workshop, Oral】</b> </br>
+        <b>Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution </b> </br>
         <a href="paper/ICCVW_LCI_2019.pdf", target="_blank">[Paper]</a>
         <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[Poster]</a>
         <a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[Slides]</a>
         <a href="https://github.com/MIVRC/SRRFN-PyTorch", target="_blank">[Code]</a>
+        【Top Conference Workshop, Oral】
         </br>
         <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Yiting Yuan, Kangfu Mei, and Faming Fang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong (Shenzhen)</p>
@@ -142,13 +143,14 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
         <i style="font-size: 0.6rem; padding-left: 1rem">Learning for Computational Imaging (LCI) Workshop</i>
     </li>
     <li>
-        <b>Multi-scale Residual Network for Image Super-Resolution 【Top Conference】</b> </br>
+        <b>Multi-scale Residual Network for Image Super-Resolution </b> </br>
         <!--.
         <a href="http://openaccess.thecvf.com/content_ECCV_2018/papers/Juncheng_Li_Multi-scale_Residual_Network_ECCV_2018_paper.pdf">[Paper]</a>
         -->
         <a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
         <a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
+        【Top Conference】
         </br>
         <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Faming Fang, Kangfu Mei, and Guixu Zhang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, Jiangxi Normal University</p>
@@ -189,6 +191,7 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
         <b>HighEr-Resolution Network for Image Demosaicing and Enhancing</b> </br>
         <a href="paper/ICCVW_AIM_2019.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MIVRC/HERN-PyTorch", target="_blank">[Code]</a>
+        【Top Conference Workshop, Oral】
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, <u>Juncheng Li</u>, Jiajie Zhang, Haoyu Wu, Jie Li, Rui Huang </p>
         <p style="margin: 0; padding-left: 1rem">The Chinese University of Hong Kong (Shenzhen), East China Normal University</p>
@@ -223,6 +226,7 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
     <li>
         <b>NTIRE 2018 Challenge on Image Dehazing: Methods and Results</b> </br>
         <a href="paper/CVPRW_2018.pdf", target="_blank">[Paper]</a>
+        【Top Conference Workshop, Oral】
         </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition Workshop (CVPRW), 2018. </i></br>
         <i style="font-size: 0.6rem; padding-left: 1rem">New Trends in Image Restoration and Enhancement Workshop</i>
@@ -232,6 +236,7 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
         <b>AIM 2019 Challenge on Example-based RAW to RGB Mapping</b> </br>
         <a href="paper/ICCVW_2019.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MKFMIKU/RAW2RGBNet", target="_blank">[Code]</a>
+        【Top Conference Workshop, Oral】
         </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW), 2019.</i></br>
         <i style="font-size: 0.6rem; padding-left: 1rem">AIM: Advances in Image Manipulation workshop</i>
