--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
         One paper was submitted to IEEE TCSVT 2020, image super-resolution.</a>
     </li>
     <li>
-        One paper was submitted to IEEE TMM 2020, low-light image enhancemen. (cooperative)</a>.
+        One paper was submitted to IEEE TMM 2020, low-light image enhancemen. (Guided)</a>.
     </li>
     <li>
         One paper was submitted to IEEE TPAMI 2020, image super-resolution.</a>
