--- a/index.html
+++ b/index.html
@@ -6,26 +6,43 @@ author_profile: true
 <h1 style="font-size: 1rem; font-weight: bold;">Juncheng Li (李俊诚)</h1>
 
 <p style="font-size: 0.8rem;">
+School of Computer Science & Technology</br> 
+East China Normal University
+</p>
+
+<p style="font-size: 0.8rem;">
+Email: cvjunchengli@gmail.com
+</p>
+
+<p></p>
+
+
+
+<section style="font-size: 0.6rem;">
+<h1 style="font-size: 1rem; font-weight: bold;">Biography</h1>
+<p style="font-size: 0.8rem;">
 I'm a Ph.D. student at School of Computer Science & Technology, East China Normal University (ECNU) and work with Prof. Guixu Zhang and Prof. Faming Fang. Meanwhile, I’m a member of the Shanghai Key Laboratory of Multidimensional Information Processing. I will graduate in 2021.07.</br>
 My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
 My researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/publications", target="_blank">Juncheng Li</a></br> 
 Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
-
 </p>
+</section>
+
 
 <p></p>
 
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Research Interests</h1>
     <li>
-        Image restoration and enhancement, such as image super-resolution, image denoising, image dehazing, image demosaicing, and image enhancement.
+        Deep Learning, Computer Vision, Image Processing.
     </li>
     <li>
-        Image compression.
+        Image restoration and enhancement, such as image super-resolution, image denoising, image dehazing, image demosaicing, image deblurring, and image enhancement.
     </li>
     <li>
-        Deep Learning, Computer Vision.
+        Image degradation, such as image compression and image decolorization.
     </li>
+   
 </section>
 
 <p></p>
@@ -119,31 +136,31 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Selected Publications</h1>
     <li>
-        <b>Soft-edge Assisted Network for Single Image Super-Resolution </b> </br>
+        <b>【1】 Soft-edge Assisted Network for Single Image Super-Resolution </b> </br>
         <a href="paper/TIP_2020.pdf", target="_blank">[Paper]</a>
         [Code]【Top Journal】
         </br>
-        <p style="margin: 0; padding-left: 1rem">Faming Fang, <u>Juncheng Li*</u>, and Tieyong Zeng</p>
-        <p style="margin: 0; padding-left: 1rem">Author names alphabetically, Main contributor*</p>
+        <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, and Tieyong Zeng</p>
+        <p style="margin: 0; padding-left: 1rem">Author names alphabetically, <b>Main contributor*</b></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Image Processing (TIP), 2020.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
     </li>
     <li>
-        <b>Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution </b> </br>
+        <b>【2】Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution </b> </br>
         <a href="paper/ICCVW_LCI_2019.pdf", target="_blank">[Paper]</a>
         <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[Poster]</a>
         <a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[Slides]</a>
         <a href="https://github.com/MIVRC/SRRFN-PyTorch", target="_blank">[Code]</a>
         【Top Conference Workshop, Oral】
         </br>
-        <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Yiting Yuan, Kangfu Mei, and Faming Fang</p>
+        <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li</b></u>, Yiting Yuan, Kangfu Mei, and Faming Fang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong (Shenzhen)</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW), 2019.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">Learning for Computational Imaging (LCI) Workshop</i>
     </li>
     <li>
-        <b>Multi-scale Residual Network for Image Super-Resolution </b> </br>
+        <b>【3】Multi-scale Residual Network for Image Super-Resolution </b> </br>
         <!--.
         <a href="http://openaccess.thecvf.com/content_ECCV_2018/papers/Juncheng_Li_Multi-scale_Residual_Network_ECCV_2018_paper.pdf">[Paper]</a>
         -->
@@ -152,7 +169,7 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
         <a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
         【Top Conference】
         </br>
-        <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Faming Fang, Kangfu Mei, and Guixu Zhang</p>
+        <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li</b></u>, Faming Fang, Kangfu Mei, and Guixu Zhang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, Jiangxi Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of European Conference on Computer Vision (ECCV), 2018.</i>
     </li>
@@ -163,20 +180,20 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Guided Publications</h1>
     <li>
-        <b>Progressive Back-traced Dehazing Network based on Multi-resolution Recurrent Reconstruction</b> </br>
+        <b>【1】Progressive Back-traced Dehazing Network based on Multi-resolution Recurrent Reconstruction</b> </br>
         <a href="paper/Access_2020.pdf", target="_blank">[Paper]</a>
         [Code]
         </br>
-        <p style="margin: 0; padding-left: 1rem">Qiaosi Yi, Aiwen Jiang, <u>Juncheng Li</u>, Jianyi Wan, Mingwen Wang </p>
+        <p style="margin: 0; padding-left: 1rem">Qiaosi Yi, Aiwen Jiang, <u><b>Juncheng Li</b></u>, Jianyi Wan, Mingwen Wang </p>
         <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Access, 2020</i></br>
     </li>
     <li>
-        <b>An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> </br>
+        <b>【2】An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> </br>
         <a href="paper/ICONIP_2018.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MKFMIKU/SrSENet", target="_blank">[Code]</a>
         </br>
-        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u>Juncheng Li</u>, Jihua	Ye, and Mingwen Wang</p>
+        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u><b>Juncheng Li</b></u>, Jihua	Ye, and Mingwen Wang</p>
         <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Neural Information Processing (ICONIP), 2018.</i>
     </li>
@@ -188,32 +205,32 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Cooperative Papers</h1>
     <li>
-        <b>HighEr-Resolution Network for Image Demosaicing and Enhancing</b> </br>
+        <b>【1】HighEr-Resolution Network for Image Demosaicing and Enhancing</b> </br>
         <a href="paper/ICCVW_AIM_2019.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MIVRC/HERN-PyTorch", target="_blank">[Code]</a>
         【Top Conference Workshop】
         </br>
-        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, <u>Juncheng Li</u>, Jiajie Zhang, Haoyu Wu, Jie Li, Rui Huang </p>
+        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, <u><b>Juncheng Li</b></u>, Jiajie Zhang, Haoyu Wu, Jie Li, Rui Huang </p>
         <p style="margin: 0; padding-left: 1rem">The Chinese University of Hong Kong (Shenzhen), East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW), 2019.</i></br>
         <i style="font-size: 0.6rem; padding-left: 1rem">AIM: Advances in Image Manipulation workshop</i>
     </li>
     <li>
-        <b>Deep Residual Refining based Pseudo Multi-frame Network for Effective Single Image Super-Resolution</b> </br>
+        <b>【2】Deep Residual Refining based Pseudo Multi-frame Network for Effective Single Image Super-Resolution</b> </br>
         <a href="paper/IET_2018.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MKFMIKU/RPMNet", target="_blank">[Code]</a>
         </br>
-        <p style="margin: 0; padding-left: 1rem">Aiwen Jiang, Kangfu Mei, <u>Juncheng Li</u>, Bo Liu, Jihua Ye and Mingwen Wang</p>
+        <p style="margin: 0; padding-left: 1rem">Aiwen Jiang, Kangfu Mei, <u><b>Juncheng Li</b></u>, Bo Liu, Jihua Ye and Mingwen Wang</p>
         <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IET Image Processing, 2019</i>
 
     </li>
     <li>
-        <b>Progressive Feature Fusion Network for Realistic Image Dehazing</b> </br>
+        <b>【3】Progressive Feature Fusion Network for Realistic Image Dehazing</b> </br>
         <a href="paper/ACCV_2018.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MIVRC/PFFNet-PyTorch", target="_blank">[Code]</a>
         </br>
-        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u>Juncheng Li</u>, and Mingwen Wang</p>
+        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u><b>Juncheng Li</b></u>, and Mingwen Wang</p>
         <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of Asian Conference on Computer Vision (ACCV), 2018.</i>
     </li>
@@ -222,24 +239,23 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
 <p></p>
 
 <section style="font-size: 0.7rem;" class="publications">
-    <h1 style="font-size: 1rem; font-weight: bold;">Competition Reports</h1>
     <li>
-        <b>NTIRE 2018 Challenge on Image Dehazing: Methods and Results</b> </br>
-        <a href="paper/CVPRW_2018.pdf", target="_blank">[Paper]</a>
-        【Top Conference Workshop】
-        </br>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition Workshop (CVPRW), 2018. </i></br>
-        <i style="font-size: 0.6rem; padding-left: 1rem">New Trends in Image Restoration and Enhancement Workshop</i>
-    </li>
-
-    <li>
-        <b>AIM 2019 Challenge on Example-based RAW to RGB Mapping</b> </br>
+        <b>【1】AIM 2019 Challenge on Example-based RAW to RGB Mapping</b> </br>
         <a href="paper/ICCVW_2019.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MKFMIKU/RAW2RGBNet", target="_blank">[Code]</a>
         【Top Conference Workshop】
         </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW), 2019.</i></br>
         <i style="font-size: 0.6rem; padding-left: 1rem">AIM: Advances in Image Manipulation workshop</i>
+    </li>
+    <h1 style="font-size: 1rem; font-weight: bold;">Competition Reports</h1>
+    <li>
+        <b>【2】NTIRE 2018 Challenge on Image Dehazing: Methods and Results</b> </br>
+        <a href="paper/CVPRW_2018.pdf", target="_blank">[Paper]</a>
+        【Top Conference Workshop】
+        </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition Workshop (CVPRW), 2018. </i></br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">New Trends in Image Restoration and Enhancement Workshop</i>
     </li>
 </section>
 
@@ -248,13 +264,31 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Professional Service (Reviewer):</h1>
     <li>
-        IEEE TIP, IEEE TMM, IEEE Access, IEEE SPL
+        IEEE Transactions on Image Processing (TIP)
     </li>
     <li>
-        Signal Processing: Image Communication
+        IEEE Transactions on Multimedia (TMM)
     </li>
     <li>
-        IET Electronics Letters, IET Image Processing, IET Signal Processing, IET Computer Vision
+        IEEE Access
+    </li>
+    <li>
+        IEEE Signal Processing Letters (SPL)
+    </li>
+    <li>
+        Signal Processing: Image Communication (SPIC)
+    </li>
+    <li>
+        IET Computer Vision
+    </li>
+    <li>
+        IET Signal Processing
+    </li>
+    <li>
+        IET Image Processing
+    </li>
+    <li>
+        IET Electronics Letters
     </li>
 </section>
 
@@ -264,7 +298,7 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Social Activity</h1>
     <li>
-        My friend and I build a WeChat Official Account named "快乐AI".
+        My friend and I build a WeChat Official Account named 【快乐AI】.
     </li>
     <li>
         I became a China Computer Federation member in 2019.
@@ -276,7 +310,7 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
         My friend and I build a non-profit organization (<a href="https://github.com/MIVRC", target="_blank">MIVRC</a>) for open source image processing projects in 2019.
     </li>
     <li>
-        I build CLFStudio (丛林蜂工作室) in 2015, a student studio dedicated to creative project development.
+        I build CLFStudio 【丛林蜂工作室】 in 2015, a student studio dedicated to creative project development.
     </li>
 </section>
 
@@ -287,13 +321,17 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Recommend</h1>
     <li>
+        <div align= "center">
         <b>My WeChat (please indicate the purpose)</b> </br>
+        </div>
         <div align= "center">
             <img src="recommend/LJC.jpeg" width="200" height="200" /> 
         </div>
     </li>
     <li>
+        <div align= "center">
         <b>WeChat Official Account (快乐AI)</b> </br>
+       </div>
         <div align= "center">
             <img src="recommend/Happy_AI.jpeg" width="200" height="200" /> 
         </div>
