--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Email: cvjunchengli@gmail.com
 <section style="font-size: 0.6rem;">
 <h1 style="font-size: 1rem; font-weight: bold;">Biography</h1>
 <p style="font-size: 0.8rem;">
-I'm a Ph.D. student at School of Computer Science & Technology, East China Normal University (ECNU) and work with Prof. Guixu Zhang and Prof. Faming Fang. Meanwhile, I’m a member of the Shanghai Key Laboratory of Multidimensional Information Processing. I will graduate in 2021.07.</br>
+I'm a Ph.D. student at School of Computer Science & Technology, East China Normal University (ECNU) and work with Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>. Meanwhile, I’m a member of the Shanghai Key Laboratory of Multidimensional Information Processing. I will graduate in 2021.07.</br>
 </p>
 </section>
 
