--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
 Email: cvjunchengli@gmail.com
 </p>
 
+<p style="font-size: 1.5rem; color:red">
+Seeking a postdoctoral position! Please contact me if you can provide this position.
+</p>
+
 <p></p>
 
 
@@ -109,7 +113,10 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <p></p>
 
 <section style="font-size: 0.6rem;">
-    <h1 style="font-size: 1rem; font-weight: bold;">Competition Awards</h1>
+    <h1 style="font-size: 1rem; font-weight: bold;">Awards</h1>
+    <li>
+        ICCV Travel Award, 2019.
+    </li>
     <li>
         We won the 1 place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 2: Perceptual. (ICCV-AIM 2019)"</a>.
     </li>
