--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
 Email: cvjunchengli@gmail.com
 </p>
 
-<p style="font-size: 1.2rem; color:red">
-Seeking a postdoctoral position! Please contact me if you can provide this position.
+<p style="font-size: 1rem; color:red">
+Seeking a postdoctoral position! </br> 
+Please contact me if you can provide this position.
 </p>
 
 <p></p>
