--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ East China Normal University
 </p>
 
 <p style="font-size: 0.8rem;">
-My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
+My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Lsi (李俊诚)</a></br>
 My researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/publications", target="_blank">Juncheng Li</a></br> 
 Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
 </p>
@@ -32,7 +32,7 @@ Please contact me if you can provide this position.
 <section style="font-size: 0.6rem;">
 <h1 style="font-size: 1rem; font-weight: bold;">Biography</h1>
 <p style="font-size: 0.8rem;">
-I'm a Ph.D. student at School of Computer Science & Technology, East China Normal University (ECNU) and work with Prof. <b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank"> Guixu Zhang</a></b> and Prof. <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank"></a>Faming Fang</a></b>. Meanwhile, I’m a member of the Shanghai Key Laboratory of Multidimensional Information Processing. I will graduate in 2021.07.</br>
+I'm a Ph.D. student at School of Computer Science & Technology, East China Normal University (ECNU) and work with Prof. <b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank"> Guixu Zhang</a></b> and Prof. <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">Faming Fang</a></b>. Meanwhile, I’m a member of the Shanghai Key Laboratory of Multidimensional Information Processing. I will graduate in 2021.07.</br>
 </p>
 </section>
 
