--- a/index.html
+++ b/index.html
@@ -281,6 +281,12 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         IEEE Transactions on Multimedia (TMM)
     </li>
     <li>
+        IEEE Transactions on Visualization and Computer Graphics (TVCG)
+    </li>
+    <li>
+        IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)
+    </li>
+    <li>
         IEEE Access
     </li>
     <li>
