--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         One paper was submitted to IEEE TCSVT 2020, image super-resolution.</a>
     </li>
     <li>
-        One paper was submitted to IEEE TMM 2020, low-light image enhancemen. (Guided)</a>.
+        One paper was submitted to IEEE TMM 2020, low-light image enhancemen. (Guided)</a>
     </li>
     <li>
         One paper was submitted to IEEE TPAMI 2020, image super-resolution.</a>
@@ -149,7 +149,8 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
     <li>
         <b>【1】 Soft-edge Assisted Network for Single Image Super-Resolution </b> </br>
         <a href="paper/TIP_2020.pdf", target="_blank">[Paper]</a>
-        [Code]【Top Journal】
+        [Code]
+        【SCI 1区, IF=6.79】
         </br>
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, and Tieyong Zeng</p>
         <p style="margin: 0; padding-left: 1rem">Author names alphabetically, <b>Main contributor*</b></p>
@@ -193,7 +194,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
     <li>
         <b>【1】Progressive Back-traced Dehazing Network based on Multi-resolution Recurrent Reconstruction</b> </br>
         <a href="paper/Access_2020.pdf", target="_blank">[Paper]</a>
-        [Code]
+        [Code] 【SCI 2区, IF=4.098】
         </br>
         <p style="margin: 0; padding-left: 1rem">Qiaosi Yi, Aiwen Jiang, <u><b>Juncheng Li</b></u>, Jianyi Wan, Mingwen Wang </p>
         <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
@@ -203,6 +204,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <b>【2】An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> </br>
         <a href="paper/ICONIP_2018.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MKFMIKU/SrSENet", target="_blank">[Code]</a>
+        【Conference Paper】
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u><b>Juncheng Li</b></u>, Jihua	Ye, and Mingwen Wang</p>
         <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
@@ -230,6 +232,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <b>【2】Deep Residual Refining based Pseudo Multi-frame Network for Effective Single Image Super-Resolution</b> </br>
         <a href="paper/IET_2018.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MKFMIKU/RPMNet", target="_blank">[Code]</a>
+        【SCI 3区, IF=2.004】
         </br>
         <p style="margin: 0; padding-left: 1rem">Aiwen Jiang, Kangfu Mei, <u><b>Juncheng Li</b></u>, Bo Liu, Jihua Ye and Mingwen Wang</p>
         <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
@@ -240,6 +243,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <b>【3】Progressive Feature Fusion Network for Realistic Image Dehazing</b> </br>
         <a href="paper/ACCV_2018.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MIVRC/PFFNet-PyTorch", target="_blank">[Code]</a>
+        【Conference Paper】
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u><b>Juncheng Li</b></u>, and Mingwen Wang</p>
         <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
