--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 
 
 <section style="font-size: 0.7rem;" class="publications">
-    <h1 style="font-size: 1rem; font-weight: bold;">Selected Publications</h1>
+    <h1 style="font-size: 1rem; font-weight: bold;">Journal Papers</h1>
     <li>
         <b>【1】 Soft-edge Assisted Network for Single Image Super-Resolution </b> </br>
         <a href="paper/TIP_2020.pdf", target="_blank">[Paper]</a>
         [Code]
-        【SCI 1区, IF=6.79】
+        【SCI-1, IF=6.790】
         </br>
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, and Tieyong Zeng</p>
         <p style="margin: 0; padding-left: 1rem">Author names alphabetically, <b>Main contributor*</b></p>
@@ -159,12 +159,76 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
     </li>
     <li>
-        <b>【2】Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution </b> </br>
+        <b>【2】Progressive Back-traced Dehazing Network based on Multi-resolution Recurrent Reconstruction</b> </br>
+        <a href="paper/Access_2020.pdf", target="_blank">[Paper]</a>
+        [Code] 【SCI-2, IF=4.098】
+        </br>
+        <p style="margin: 0; padding-left: 1rem">Qiaosi Yi, Aiwen Jiang, <u><b>Juncheng Li</b></u>, Jianyi Wan, Mingwen Wang </p>
+        <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
+        <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Access, 2020</i></br>
+    </li>
+    <li>
+        <b>【3】Deep Residual Refining based Pseudo Multi-frame Network for Effective Single Image Super-Resolution</b> </br>
+        <a href="paper/IET_2018.pdf", target="_blank">[Paper]</a>
+        <a href="https://github.com/MKFMIKU/RPMNet", target="_blank">[Code]</a>
+        【SCI-3, IF=2.004】
+        </br>
+        <p style="margin: 0; padding-left: 1rem">Aiwen Jiang, Kangfu Mei, <u><b>Juncheng Li</b></u>, Bo Liu, Jihua Ye and Mingwen Wang</p>
+        <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
+        <i style="font-size: 0.6rem; padding-left: 1rem">IET Image Processing, 2019</i>
+
+    </li>
+</section>
+
+<p></p>
+
+<section style="font-size: 0.7rem;" class="publications">
+    <h1 style="font-size: 1rem; font-weight: bold;">Conference Papers</h1>
+    <li>
+        <b>【1】Multi-scale Residual Network for Image Super-Resolution </b> </br>
+        <!--.
+        <a href="http://openaccess.thecvf.com/content_ECCV_2018/papers/Juncheng_Li_Multi-scale_Residual_Network_ECCV_2018_paper.pdf">[Paper]</a>
+        -->
+        <a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
+        <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
+        <a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
+        </br>
+        <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li</b></u>, Faming Fang, Kangfu Mei, and Guixu Zhang</p>
+        <p style="margin: 0; padding-left: 1rem">East China Normal University, Jiangxi Normal University</p>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of European Conference on Computer Vision (ECCV), 2018.</i>
+    </li>
+    <li>
+        <b>【2】Progressive Feature Fusion Network for Realistic Image Dehazing</b> </br>
+        <a href="paper/ACCV_2018.pdf", target="_blank">[Paper]</a>
+        <a href="https://github.com/MIVRC/PFFNet-PyTorch", target="_blank">[Code]</a>
+        </br>
+        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u><b>Juncheng Li</b></u>, and Mingwen Wang</p>
+        <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of Asian Conference on Computer Vision (ACCV), 2018.</i>
+    </li>
+    <li>
+        <b>【3】An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> </br>
+        <a href="paper/ICONIP_2018.pdf", target="_blank">[Paper]</a>
+        <a href="https://github.com/MKFMIKU/SrSENet", target="_blank">[Code]</a>
+        </br>
+        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u><b>Juncheng Li</b></u>, Jihua	Ye, and Mingwen Wang</p>
+        <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Neural Information Processing (ICONIP), 2018.</i>
+    </li>
+
+</section>
+
+<p></p>
+
+<section style="font-size: 0.7rem;" class="publications">
+    <h1 style="font-size: 1rem; font-weight: bold;">Workshop Papers</h1>
+    <li>
+        <b>【1】Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution </b> </br>
         <a href="paper/ICCVW_LCI_2019.pdf", target="_blank">[Paper]</a>
         <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[Poster]</a>
         <a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[Slides]</a>
         <a href="https://github.com/MIVRC/SRRFN-PyTorch", target="_blank">[Code]</a>
-        【Top Conference Workshop, Oral】
+        【Oral】
         </br>
         <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li</b></u>, Yiting Yuan, Kangfu Mei, and Faming Fang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong (Shenzhen)</p>
@@ -172,56 +236,9 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <i style="font-size: 0.6rem; padding-left: 1rem">Learning for Computational Imaging (LCI) Workshop</i>
     </li>
     <li>
-        <b>【3】Multi-scale Residual Network for Image Super-Resolution </b> </br>
-        <!--.
-        <a href="http://openaccess.thecvf.com/content_ECCV_2018/papers/Juncheng_Li_Multi-scale_Residual_Network_ECCV_2018_paper.pdf">[Paper]</a>
-        -->
-        <a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
-        <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
-        <a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
-        【Top Conference】
-        </br>
-        <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li</b></u>, Faming Fang, Kangfu Mei, and Guixu Zhang</p>
-        <p style="margin: 0; padding-left: 1rem">East China Normal University, Jiangxi Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of European Conference on Computer Vision (ECCV), 2018.</i>
-    </li>
-</section>
-
-<p></p>
-
-<section style="font-size: 0.7rem;" class="publications">
-    <h1 style="font-size: 1rem; font-weight: bold;">Guided Publications</h1>
-    <li>
-        <b>【1】Progressive Back-traced Dehazing Network based on Multi-resolution Recurrent Reconstruction</b> </br>
-        <a href="paper/Access_2020.pdf", target="_blank">[Paper]</a>
-        [Code] 【SCI 2区, IF=4.098】
-        </br>
-        <p style="margin: 0; padding-left: 1rem">Qiaosi Yi, Aiwen Jiang, <u><b>Juncheng Li</b></u>, Jianyi Wan, Mingwen Wang </p>
-        <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Access, 2020</i></br>
-    </li>
-    <li>
-        <b>【2】An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> </br>
-        <a href="paper/ICONIP_2018.pdf", target="_blank">[Paper]</a>
-        <a href="https://github.com/MKFMIKU/SrSENet", target="_blank">[Code]</a>
-        【Conference Paper】
-        </br>
-        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u><b>Juncheng Li</b></u>, Jihua	Ye, and Mingwen Wang</p>
-        <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Neural Information Processing (ICONIP), 2018.</i>
-    </li>
-</section>
-
-<p></p>
-
-
-<section style="font-size: 0.7rem;" class="publications">
-    <h1 style="font-size: 1rem; font-weight: bold;">Cooperative Papers</h1>
-    <li>
-        <b>【1】HighEr-Resolution Network for Image Demosaicing and Enhancing</b> </br>
+        <b>【2】HighEr-Resolution Network for Image Demosaicing and Enhancing</b> </br>
         <a href="paper/ICCVW_AIM_2019.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MIVRC/HERN-PyTorch", target="_blank">[Code]</a>
-        【Top Conference Workshop】
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, <u><b>Juncheng Li</b></u>, Jiajie Zhang, Haoyu Wu, Jie Li, Rui Huang </p>
         <p style="margin: 0; padding-left: 1rem">The Chinese University of Hong Kong (Shenzhen), East China Normal University</p>
@@ -229,45 +246,16 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <i style="font-size: 0.6rem; padding-left: 1rem">AIM: Advances in Image Manipulation workshop</i>
     </li>
     <li>
-        <b>【2】Deep Residual Refining based Pseudo Multi-frame Network for Effective Single Image Super-Resolution</b> </br>
-        <a href="paper/IET_2018.pdf", target="_blank">[Paper]</a>
-        <a href="https://github.com/MKFMIKU/RPMNet", target="_blank">[Code]</a>
-        【SCI 3区, IF=2.004】
-        </br>
-        <p style="margin: 0; padding-left: 1rem">Aiwen Jiang, Kangfu Mei, <u><b>Juncheng Li</b></u>, Bo Liu, Jihua Ye and Mingwen Wang</p>
-        <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">IET Image Processing, 2019</i>
-
-    </li>
-    <li>
-        <b>【3】Progressive Feature Fusion Network for Realistic Image Dehazing</b> </br>
-        <a href="paper/ACCV_2018.pdf", target="_blank">[Paper]</a>
-        <a href="https://github.com/MIVRC/PFFNet-PyTorch", target="_blank">[Code]</a>
-        【Conference Paper】
-        </br>
-        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u><b>Juncheng Li</b></u>, and Mingwen Wang</p>
-        <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of Asian Conference on Computer Vision (ACCV), 2018.</i>
-    </li>
-</section>
-
-<p></p>
-
-<section style="font-size: 0.7rem;" class="publications">
-    <h1 style="font-size: 1rem; font-weight: bold;">Competition Reports</h1>
-    <li>
-        <b>【1】AIM 2019 Challenge on Example-based RAW to RGB Mapping</b> </br>
+        <b>【3】AIM 2019 Challenge on Example-based RAW to RGB Mapping</b> </br>
         <a href="paper/ICCVW_2019.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MKFMIKU/RAW2RGBNet", target="_blank">[Code]</a>
-        【Top Conference Workshop】
         </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW), 2019.</i></br>
         <i style="font-size: 0.6rem; padding-left: 1rem">AIM: Advances in Image Manipulation workshop</i>
     </li>
     <li>
-        <b>【2】NTIRE 2018 Challenge on Image Dehazing: Methods and Results</b> </br>
+        <b>【4】NTIRE 2018 Challenge on Image Dehazing: Methods and Results</b> </br>
         <a href="paper/CVPRW_2018.pdf", target="_blank">[Paper]</a>
-        【Top Conference Workshop】
         </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition Workshop (CVPRW), 2018. </i></br>
         <i style="font-size: 0.6rem; padding-left: 1rem">New Trends in Image Restoration and Enhancement Workshop</i>
