--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Recent News</h1>
     <li>
+        Two papers were submitted to ACM MM 2020, image stitching/image deblurring. (Guided)</a>
+    </li>
+    <li>
         One paper was submitted to IEEE TCSVT 2020, image super-resolution.</a>
     </li>
     <li>
         One paper was submitted to IEEE TMM 2020, low-light image enhancemen. (Guided)</a>
-    </li>
-    <li>
-        One paper was submitted to IEEE TPAMI 2020, image super-resolution.</a>
     </li>
     <li>
         One paper was submitted to IEEE TNNLS 2019, image denoising.</a>
