--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
 Email: cvjunchengli@gmail.com
 </p>
 
-<p style="font-size: 1rem; color:red">
+<!-- <p style="font-size: 1rem; color:red">
 Seeking a postdoctoral position! </br> 
 Please contact me if you can provide this position.
-</p>
+</p> -->
 
 <p></p>
 
