--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Recent News</h1>
     <li>
+        One paper was submitted to NeurlPS 2020.</a>
+    </li>
+    <li>
         Two papers were submitted to ACM MM 2020, image stitching/image deblurring. (Guided)</a>
     </li>
     <li>
@@ -195,7 +198,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         </br>
         <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li</b></u>, Faming Fang, Kangfu Mei, and Guixu Zhang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, Jiangxi Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of European Conference on Computer Vision (ECCV), 2018.</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of European Conference on Computer Vision (ECCV, Top conference), 2018.</i>
     </li>
     <li>
         <b>【2】Progressive Feature Fusion Network for Realistic Image Dehazing</b> </br>
