--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, and Tieyong Zeng</p>
         <p style="margin: 0; padding-left: 1rem">Author names alphabetically, <b>Main contributor*</b></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Image Processing (TIP), 2020.</i> </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Image Processing (TIP, Top Journal), 2020.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
     </li>
     <li>
