--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, and Tieyong Zeng</p>
         <p style="margin: 0; padding-left: 1rem">Author names alphabetically, <b>Main contributor*</b></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Image Processing (TIP, Top Journal), 2020.</i> </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Image Processing (TIP, <font color="red">Top Journal</font>), 2020.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
     </li>
     <li>
@@ -198,7 +198,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         </br>
         <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li</b></u>, Faming Fang, Kangfu Mei, and Guixu Zhang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, Jiangxi Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of European Conference on Computer Vision (ECCV, Top conference), 2018.</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of European Conference on Computer Vision (ECCV, <font color="red">Top conference</font>), 2018.</i>
     </li>
     <li>
         <b>【2】Progressive Feature Fusion Network for Realistic Image Dehazing</b> </br>
@@ -231,7 +231,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[Poster]</a>
         <a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[Slides]</a>
         <a href="https://github.com/MIVRC/SRRFN-PyTorch", target="_blank">[Code]</a>
-        【Oral】
+        <font color="red">【Oral】</font>
         </br>
         <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li</b></u>, Yiting Yuan, Kangfu Mei, and Faming Fang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong (Shenzhen)</p>
@@ -275,9 +275,6 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
     </li>
     <li>
         IEEE Transactions on Multimedia (TMM)
-    </li>
-    <li>
-        IEEE Transactions on Visualization and Computer Graphics (TVCG)
     </li>
     <li>
         IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)
