--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         【SCI-1, IF=6.790】
         </br>
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, and Tieyong Zeng</p>
-        <p style="margin: 0; padding-left: 1rem">Author names alphabetically, <b>Main contributor*</b></p>
+        <p style="margin: 0; padding-left: 1rem"><font color="red">Author names alphabetically, <b>Main contributor*</b></font></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Image Processing (TIP, <font color="red">Top Journal</font>), 2020.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
