--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, and Tieyong Zeng</p>
         <p style="margin: 0; padding-left: 1rem"><font color="red">Author names alphabetically, <b>Main contributor*</b></font></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Image Processing (TIP, <font color="red">Top Journal</font>), 2020.</i> </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Image Processing (TIP, <font color="red"><b>Top Journal</b></font>), 2020.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
     </li>
     <li>
@@ -198,7 +198,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         </br>
         <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li</b></u>, Faming Fang, Kangfu Mei, and Guixu Zhang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, Jiangxi Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of European Conference on Computer Vision (ECCV, <font color="red">Top conference</font>), 2018.</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of European Conference on Computer Vision (ECCV, <font color="red"><b>Top Conference</b></font>), 2018.</i>
     </li>
     <li>
         <b>【2】Progressive Feature Fusion Network for Realistic Image Dehazing</b> </br>
