add new information

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[Poster]</a>
         <a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[Slides]</a>
         <a href="https://github.com/MIVRC/SRRFN-PyTorch", target="_blank">[Code]</a>
-        <font color="red">【Oral】</font>
+        <font color="red"><b>【Oral】</b></font>
         </br>
         <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li</b></u>, Yiting Yuan, Kangfu Mei, and Faming Fang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong (Shenzhen)</p>
