--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Journal Papers</h1>
     <li>
-        <b>【1】 Soft-edge Assisted Network for Single Image Super-Resolution </b> </br>
+        <b>【3】 Soft-edge Assisted Network for Single Image Super-Resolution </b> </br>
         <a href="paper/TIP_2020.pdf", target="_blank">[Paper]</a>
         [Code]
         【SCI-1, IF=6.790】
@@ -171,7 +171,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Access, 2020</i></br>
     </li>
     <li>
-        <b>【3】Deep Residual Refining based Pseudo Multi-frame Network for Effective Single Image Super-Resolution</b> </br>
+        <b>【1】Deep Residual Refining based Pseudo Multi-frame Network for Effective Single Image Super-Resolution</b> </br>
         <a href="paper/IET_2018.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MKFMIKU/RPMNet", target="_blank">[Code]</a>
         【SCI-3, IF=2.004】
@@ -188,7 +188,15 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Conference Papers</h1>
     <li>
-        <b>【1】Multi-scale Residual Network for Image Super-Resolution </b> </br>
+        <b>【4】Disentangle Perceptual Learning through Online Contrastive Learning </b> </br>
+        <a href="paper/arxiv.pdf", target="_blank">[Paper]</a>
+        </br>
+        <p style="margin: 0; padding-left: 1rem"><u>Kangfu Mei, Yao Lu, Qiaosi Yi, Haoyu Wu, <b>Juncheng Li</b></u>, and Rui Huang</p>
+        <p style="margin: 0; padding-left: 1rem">The Chinese University of Hong Kong (Shenzhen),  East China Normal University</p>
+        <i style="font-size: 0.6rem; padding-left: 1rem">arXiv</i>
+    </li>
+    <li>
+        <b>【3】Multi-scale Residual Network for Image Super-Resolution </b> </br>
         <!--.
         <a href="http://openaccess.thecvf.com/content_ECCV_2018/papers/Juncheng_Li_Multi-scale_Residual_Network_ECCV_2018_paper.pdf">[Paper]</a>
         -->
@@ -210,7 +218,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of Asian Conference on Computer Vision (ACCV), 2018.</i>
     </li>
     <li>
-        <b>【3】An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> </br>
+        <b>【1】An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> </br>
         <a href="paper/ICONIP_2018.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MKFMIKU/SrSENet", target="_blank">[Code]</a>
         </br>
@@ -226,7 +234,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Workshop Papers</h1>
     <li>
-        <b>【1】Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution </b> </br>
+        <b>【4】Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution </b> </br>
         <a href="paper/ICCVW_LCI_2019.pdf", target="_blank">[Paper]</a>
         <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[Poster]</a>
         <a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[Slides]</a>
@@ -239,7 +247,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <i style="font-size: 0.6rem; padding-left: 1rem">Learning for Computational Imaging (LCI) Workshop</i>
     </li>
     <li>
-        <b>【2】HighEr-Resolution Network for Image Demosaicing and Enhancing</b> </br>
+        <b>【3】HighEr-Resolution Network for Image Demosaicing and Enhancing</b> </br>
         <a href="paper/ICCVW_AIM_2019.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MIVRC/HERN-PyTorch", target="_blank">[Code]</a>
         </br>
@@ -249,7 +257,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <i style="font-size: 0.6rem; padding-left: 1rem">AIM: Advances in Image Manipulation workshop</i>
     </li>
     <li>
-        <b>【3】AIM 2019 Challenge on Example-based RAW to RGB Mapping</b> </br>
+        <b>【2】AIM 2019 Challenge on Example-based RAW to RGB Mapping</b> </br>
         <a href="paper/ICCVW_2019.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MKFMIKU/RAW2RGBNet", target="_blank">[Code]</a>
         </br>
@@ -257,7 +265,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <i style="font-size: 0.6rem; padding-left: 1rem">AIM: Advances in Image Manipulation workshop</i>
     </li>
     <li>
-        <b>【4】NTIRE 2018 Challenge on Image Dehazing: Methods and Results</b> </br>
+        <b>【1】NTIRE 2018 Challenge on Image Dehazing: Methods and Results</b> </br>
         <a href="paper/CVPRW_2018.pdf", target="_blank">[Paper]</a>
         </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition Workshop (CVPRW), 2018. </i></br>
