--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <b>【4】Disentangle Perceptual Learning through Online Contrastive Learning </b> </br>
         <a href="paper/arxiv.pdf", target="_blank">[Paper]</a>
         </br>
-        <p style="margin: 0; padding-left: 1rem"><u>Kangfu Mei, Yao Lu, Qiaosi Yi, Haoyu Wu, <b>Juncheng Li</b></u>, and Rui Huang</p>
+        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Yao Lu, Qiaosi Yi, Haoyu Wu, <u><b>Juncheng Li</b></u>, and Rui Huang</p>
         <p style="margin: 0; padding-left: 1rem">The Chinese University of Hong Kong (Shenzhen),  East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">arXiv preprint arXiv: 2006.13511.</i>
     </li>
