--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ East China Normal University
 </p>
 
 <p style="font-size: 0.8rem;">
-My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Lsi (李俊诚)</a></br>
+My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
 My researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/publications", target="_blank">Juncheng Li</a></br> 
-Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
+Long-term co-authors: Kangfu Mei, ZENG Tieyong, Aiwen Jiang, Qiaosi Yi.
 </p>
 
 <p style="font-size: 0.8rem;">
@@ -62,7 +62,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         One paper was submitted to NeurlPS 2020.</a>
     </li>
     <li>
-        Two papers were submitted to ACM MM 2020, image stitching/image deblurring. (Guided)</a>
+        One paper was submitted to ACM MM 2020, image deblurring. (Guided)</a>
     </li>
     <li>
         One paper was submitted to IEEE TCSVT 2020, image super-resolution.</a>
