--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, and Tieyong Zeng</p>
         <p style="margin: 0; padding-left: 1rem"><font color="red">Author names alphabetically, <b>Main contributor*</b></font></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Image Processing (TIP, <font color="red"><b>Top Journal</b></font>), 2020.</i> </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Image Processing (<font color="red"><b>TIP, Top Journal</b></font>), 2020.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
     </li>
     <li>
@@ -206,7 +206,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         </br>
         <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li</b></u>, Faming Fang, Kangfu Mei, and Guixu Zhang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, Jiangxi Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of European Conference on Computer Vision (ECCV, <font color="red"><b>Top Conference</b></font>), 2018.</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of European Conference on Computer Vision (<font color="red"><b>ECCV, Top Conference</b></font>), 2018.</i>
     </li>
     <li>
         <b>【2】Progressive Feature Fusion Network for Realistic Image Dehazing</b> </br>
@@ -243,7 +243,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         </br>
         <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li</b></u>, Yiting Yuan, Kangfu Mei, and Faming Fang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong (Shenzhen)</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW), 2019.</i> </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (<font color="red"><b>ICCVW</b></font>), 2019.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">Learning for Computational Imaging (LCI) Workshop</i>
     </li>
     <li>
@@ -253,7 +253,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, <u><b>Juncheng Li</b></u>, Jiajie Zhang, Haoyu Wu, Jie Li, Rui Huang </p>
         <p style="margin: 0; padding-left: 1rem">The Chinese University of Hong Kong (Shenzhen), East China Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW), 2019.</i></br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (<font color="red"><b>ICCVW</b></font>), 2019.</i></br>
         <i style="font-size: 0.6rem; padding-left: 1rem">AIM: Advances in Image Manipulation workshop</i>
     </li>
     <li>
@@ -261,14 +261,14 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <a href="paper/ICCVW_2019.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MKFMIKU/RAW2RGBNet", target="_blank">[Code]</a>
         </br>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW), 2019.</i></br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (<font color="red"><b>ICCVW</b></font>), 2019.</i></br>
         <i style="font-size: 0.6rem; padding-left: 1rem">AIM: Advances in Image Manipulation workshop</i>
     </li>
     <li>
         <b>【1】NTIRE 2018 Challenge on Image Dehazing: Methods and Results</b> </br>
         <a href="paper/CVPRW_2018.pdf", target="_blank">[Paper]</a>
         </br>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition Workshop (CVPRW), 2018. </i></br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition Workshop (<font color="red"><b>CVPRW</b></font>), 2018. </i></br>
         <i style="font-size: 0.6rem; padding-left: 1rem">New Trends in Image Restoration and Enhancement Workshop</i>
     </li>
 </section>
